# nanoMD

./: .gitignore  LICENSE  README.md  env_main.yaml  nanomd.py  pyproject.toml
nanomd/: __init__.py  main.py
nanomd/modules/: detectMod.py  detectmod.py  gene.py  isoform.py  isoformAS.py  mapping.py  matrix.py  nascentRNA.py  ployA.py  polyA.py
nanomd/scripts/: gene.R  isoform.R  m6a.R  m6a.sh  metaplot.R  nascentRNA.R  selectM6A.R
nanomd/static/: env.yaml  tools.yaml
nanomd/utils/: 20201103newmRNA.ipynb  20201111train.ipynb  Untitled.ipynb  Untitled1.ipynb  abs_position.py  basetools.py  gene.py  m6A.py  map.py  modifications.py  modmutil.py  modtools.py  nascentRNA_fetch.py  newRNA_fetch.py  oldmodifications.py  ployA_tools.py  pod5_to_fast5.py  polyAtools.py  quantify.py  sam_fatures_catch_all.py  split.py  test_data.csv
nanomd/utils/.ipynb_checkpoints/: 20201103newmRNA-checkpoint.ipynb  train-checkpoint.ipynb
tests/: test.ipynb
