[project]
name = "nanomd"
version = "0.4.1"
description = ""
authors = [
    {name = "DeYing Zhang",email = "legendzdy@dingtalk.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "typer (>=0.15.2)",
    "pysam (>=0.22.1)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "basebio (>=0.3.6,<0.4.0)",
    "pod5 (>=0.3.28,<0.4.0)",
]

[tool.poetry.scripts]
nanomd = "nanomd.main:app"

[[tool.poetry.source]]
name = "pypi2"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
